--- a/Services/repairYourself.html
+++ b/Services/repairYourself.html
@@ -103,7 +103,6 @@
                     <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
                         <li><a class="dropdown-item" href="./Services/buildYours">Build Your Bike</a></li>
                         <li><a class="dropdown-item" href="./Services/mAndR">Maintenance & Repair</a></li>
-                        <li><a class="dropdown-item" href="./Services/repairYourself">Repair By Yourself</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -112,6 +111,7 @@
                         <li><a class="dropdown-item" href="./about">Mission</a></li>
                         <li><a class="dropdown-item" href="./AboutUs/PierreGeorges">Our Founder & Our Lead Mechanic</a></li>
                         <li><a class="dropdown-item" href="./AboutUs/LindaTorres">Our Community & Our Education Manager</a></li>
+                        <li><a class="dropdown-item" href="./AboutUs/NaharMalik">Our Customer Experience Specialistc</a></li>
                         <li><a class="dropdown-item" href="./AboutUs/TariqBenson">Our Sustainability & Our Partnerships Lead</a></li>
                     </ul>
                 </li>
