--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bike Eazy</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
+    <style>
+        body {
+            font-family: 'Segoe UI', sans-serif;
+            background-color: #F0F5F2;
+        }
+        .navbar {
+            background-color: #f6ebdb;
+            box-shadow: 0 2px 4px rgba(209, 221, 216, 1);
+        }
+        .infoBox {
+            background-color: #71A499;
+            border-radius: 5px;
+            color: #08483F;
+            padding: 5px 15px;
+            font-size: 0.95rem;
+        }
+        .buttonBox {
+            background-color: #08483F;
+            border-radius: 8px;
+            color: #ffffff;
+            padding: 8px 18px;
+            font-weight: 500;
+            transition: 0.3s ease;
+        }
+        .buttonBox:hover {
+            background-color: #ffffff;
+            color: #0a5f52;
+        }
+        .card {
+            background-color: #ffffff;
+            border: none;
+            color: #333;
+            transition: transform 0.3s ease;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+        }
+        .card:hover {
+            transform: scale(1.02);
+        }
+        .card-title {
+            color: #08483F;
+            font-weight: bold;
+        }
+        .btn-tech {
+            background-color: #08483F;
+            color: #ffffff;
+            border: none;
+        }
+        .btn-tech:hover {
+            background-color: #0a5f52;
+        }
+        .fit {
+            width: 100%;
+        }
+        .card-section {
+            background-color: #ffffff;
+            border-radius: 16px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.06);
+            padding: 2rem;
+        }
+        h3, h4 {
+            color: #08483F;
+            font-weight: 600;
+        }
+        footer {
+            font-size: 0.9rem;
+            color: #666;
+        }
+    </style>
 </head>
 <body>
+
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-light sticky-top">
+    <div class="container-fluid flex-column align-items-start">
+        <div class="d-flex w-100 justify-content-between align-items-center mb-2 flex-wrap">
+            <a class="navbar-brand d-flex align-items-center" href="index.html">
+                <img src="img/logo.png" alt="Bike Eazy Logo" width="50" class="me-2" />
+                <span class="fw-bold fs-4">Bike Easy</span>
+            </a>
+            <div class="d-flex flex-wrap align-items-center gap-3">
+                <span class="infoBox">145 Rideau Street, Ottawa, ON</span>
+                <span class="infoBox">(613) 555-9283</span>
+            </div>
+        </div>
+
+        <button class="navbar-toggler mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#navToggle">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse w-100" id="navToggle">
+            <ul class="navbar-nav d-flex align-items-start gap-3">
+                <li class="nav-item"><a class="nav-link" href="./">Home</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="./services" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
+                    <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
+                        <li><a class="dropdown-item" href="./Services/buildYours">Build Your Bike</a></li>
+                        <li><a class="dropdown-item" href="./Services/mAndR">Maintenance & Repair</a></li>
+                        <li><a class="dropdown-item" href="./Services/repairYourself">Repair By Yourself</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="./about" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
+                    <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
+                        <li><a class="dropdown-item" href="./about">Mission</a></li>
+                        <li><a class="dropdown-item" href="./AboutUs/PierreGeorges">Our Founder & Our Lead Mechanic</a></li>
+                        <li><a class="dropdown-item" href="./AboutUs/LindaTorres">Our Community & Our Education Manager</a></li>
+                        <li><a class="dropdown-item" href="./AboutUs/NaharMalik">Our Customer Experience Specialistc</a></li>
+                        <li><a class="dropdown-item" href="./AboutUs/TariqBenson">Our Sustainability & Our Partnerships Lead</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item"><a class="nav-link" href="./contact">Contact Us</a></li>
+            </ul>
+            <div class="ms-auto">
+                <a class="btn buttonBox" href="./location">Hour of Operation</a>
+                <a class="btn buttonBox" href="./book">Book</a>
+            </div>
+        </div>
+    </div>
+</nav>
 
 </body>
 </html>
