--- a/index.html
+++ b/index.html
@@ -97,19 +97,18 @@
 
         <div class="collapse navbar-collapse w-100" id="navToggle">
             <ul class="navbar-nav d-flex align-items-start gap-3">
-                <li class="nav-item"><a class="nav-link" href="./">Home</a></li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
+                    <a class="nav-link dropdown-toggle" href="./services" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
                     <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
-                        <li><a class="dropdown-item" href="#">Build Your Bike</a></li>
-                        <li><a class="dropdown-item" href="#">Maintenance & Repair</a></li>
-                        <li><a class="dropdown-item" href="#">Repair By Yourself</a></li>
+                        <li><a class="dropdown-item" href="./Services/buildYours">Build Your Bike</a></li>
+                        <li><a class="dropdown-item" href="./Services/mAndR">Maintenance & Repair</a></li>
+                        <li><a class="dropdown-item" href="./Services/repairYourself">Repair By Yourself</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
+                    <a class="nav-link dropdown-toggle" href="./about" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
                     <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
-                        <li><a class="dropdown-item" href="#mission">Mission</a></li>
+                        <li><a class="dropdown-item" href="./about">Mission</a></li>
                         <li><a class="dropdown-item" href="./AboutUs/PierreGeorges">Our Founder & Our Lead Mechanic</a></li>
                         <li><a class="dropdown-item" href="./AboutUs/LindaTorres">Our Community & Our Education Manager</a></li>
                         <li><a class="dropdown-item" href="./AboutUs/NaharMalik">Our Customer Experience Specialistc</a></li>
