--- a/location.html
+++ b/location.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hours of Operation – Bike Eazy</title>
+    <title>Bike Eazy</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
     <style>
@@ -34,40 +34,40 @@
             background-color: #ffffff;
             color: #0a5f52;
         }
-        .dropdown {
-            position: relative;
-            display: inline-block;
+        .card {
+            background-color: #ffffff;
+            border: none;
+            color: #333;
+            transition: transform 0.3s ease;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
         }
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #f1f1f1;
-            min-width: 160px;
-            height: fit-content;
-            width: fit-content;
-            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-            z-index: 1;
+        .card:hover {
+            transform: scale(1.02);
         }
-        .dropdown-content a {
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            height: fit-content;
-            width: fit-content;
-            display: block;
+        .card-title {
+            color: #08483F;
+            font-weight: bold;
         }
-        .dropdown-content a:hover {background-color: #ddd;}
-        .dropdown:hover .dropdown-content {display: block;}
+        .btn-tech {
+            background-color: #08483F;
+            color: #ffffff;
+            border: none;
+        }
+        .btn-tech:hover {
+            background-color: #0a5f52;
+        }
+        .fit {
+            width: 100%;
+        }
         .card-section {
             background-color: #ffffff;
             border-radius: 16px;
             box-shadow: 0 4px 12px rgba(0,0,0,0.06);
             padding: 2rem;
         }
-        h4 {
+        h3, h4 {
             color: #08483F;
             font-weight: 600;
-            margin-bottom: 0.75rem;
         }
         footer {
             font-size: 0.9rem;
@@ -83,7 +83,7 @@
         <div class="d-flex w-100 justify-content-between align-items-center mb-2 flex-wrap">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
                 <img src="img/logo.png" alt="Bike Eazy Logo" width="50" class="me-2" />
-                <span class="fw-bold fs-4">Hour Of Operation</span>
+                <span class="fw-bold fs-4">Bike Easy</span>
             </a>
             <div class="d-flex flex-wrap align-items-center gap-3">
                 <span class="infoBox">145 Rideau Street, Ottawa, ON</span>
@@ -98,31 +98,28 @@
         <div class="collapse navbar-collapse w-100" id="navToggle">
             <ul class="navbar-nav d-flex align-items-start gap-3">
                 <li class="nav-item"><a class="nav-link" href="./">Home</a></li>
-                <li class="nav-item">
-                    <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Services
-                    </a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="./services" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
                     <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
-                        <li><a class="dropdown-item" href="#">Build Your Bike</a></li>
-                        <li><a class="dropdown-item" href="#">Maintenance & Repair</a></li>
-                        <li><a class="dropdown-item" href="#">Repair By Yourself</a></li>
+                        <li><a class="dropdown-item" href="./Services/buildYours">Build Your Bike</a></li>
+                        <li><a class="dropdown-item" href="./Services/mAndR">Maintenance & Repair</a></li>
+                        <li><a class="dropdown-item" href="./Services/repairYourself">Repair By Yourself</a></li>
                     </ul>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        About Us
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
-                        <li><p class="dropdown-item">OUR TEAM</p></li>
-                        <li><a class="dropdown-item" href="#">Pierre Georges</a></li>
-                        <li><a class="dropdown-item" href="#">Linda Torres</a></li>
-                        <li><a class="dropdown-item" href="#">Nahar Malik</a></li>
-                        <li><a class="dropdown-item" href="#">Tariq Benson</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="./about" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
+                    <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
+                        <li><a class="dropdown-item" href="./about">Mission</a></li>
+                        <li><a class="dropdown-item" href="./AboutUs/PierreGeorges">Our Founder & Our Lead Mechanic</a></li>
+                        <li><a class="dropdown-item" href="./AboutUs/LindaTorres">Our Community & Our Education Manager</a></li>
+                        <li><a class="dropdown-item" href="./AboutUs/NaharMalik">Our Customer Experience Specialistc</a></li>
+                        <li><a class="dropdown-item" href="./AboutUs/TariqBenson">Our Sustainability & Our Partnerships Lead</a></li>
                     </ul>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="./contact">Contact Us</a></li>
             </ul>
             <div class="ms-auto">
+                <a class="btn buttonBox" href="./location">Hour of Operation</a>
                 <a class="btn buttonBox" href="./book">Book</a>
             </div>
         </div>
